--- a/main.html
+++ b/main.html
@@ -10,7 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+   <h1>DDLJ</h1>
+   <nav>
+	   <ul>
+		   <li>Actor</li>
+		    <li>Quote</li>
+	   </ul>
+   </nav>
+   <summary>abcde</summary>
+	<section>
+		<p id="actor">Actor</p>
+		<p id="quote">Actor</p>
+	</section>
+	<aside>5 star</aside>
+	<footer>Produced by: &lt name &gt</footer>
 </body>
 
 </html>
